# scale_fema_p695

./: .gitignore  README.md  pyproject.toml
Fema_P695_records_converted/: SortedEQFile_(120111).txt  SortedEQFile_(120112).txt  SortedEQFile_(120121).txt  SortedEQFile_(120122).txt  SortedEQFile_(120411).txt  SortedEQFile_(120412).txt  SortedEQFile_(120521).txt  SortedEQFile_(120522).txt  SortedEQFile_(120611).txt  SortedEQFile_(120612).txt  SortedEQFile_(120621).txt  SortedEQFile_(120622).txt  SortedEQFile_(120711).txt  SortedEQFile_(120712).txt  SortedEQFile_(120721).txt  SortedEQFile_(120722).txt  SortedEQFile_(120811).txt  SortedEQFile_(120812).txt  SortedEQFile_(120821).txt  SortedEQFile_(120822).txt  SortedEQFile_(120911).txt  SortedEQFile_(120912).txt  SortedEQFile_(120921).txt  SortedEQFile_(120922).txt  SortedEQFile_(121011).txt  SortedEQFile_(121012).txt  SortedEQFile_(121021).txt  SortedEQFile_(121022).txt  SortedEQFile_(121111).txt  SortedEQFile_(121112).txt  SortedEQFile_(121211).txt  SortedEQFile_(121212).txt  SortedEQFile_(121221).txt  SortedEQFile_(121222).txt  SortedEQFile_(121321).txt  SortedEQFile_(121322).txt  SortedEQFile_(121411).txt  SortedEQFile_(121412).txt  SortedEQFile_(121421).txt  SortedEQFile_(121422).txt  (+4 more)
config/: config.toml
outputs/Spectra/Design/: Design_Iran2800.txt  Design_UBC97.txt
outputs/Spectra/Response/: Response_120521.txt  Response_120522.txt  Response_120711.txt  Response_120712.txt  Response_120821.txt  Response_120822.txt  Response_121111.txt  Response_121112.txt  Response_121421.txt  (+3 more)
scripts/: scale_records.py
(+15 files in other folders)
